index.css
html, body {
    height: 100%;
    margin: 0;
    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
}

footer {
    clear: both;
    position: relative;
    height: 100px;
    margin-top: -100px;
}

.content {
    width: 50%;
    margin: auto;
}

.wrapper {
    height: 100%;
    min-height: 100%;
    margin-bottom: -100px;
}

.wrapper h1 {
    margin-top: 0;
    padding-top: 80px;
}

.push {
    margin-bottom: -100px;
}

.ref {
    text-decoration: none;
    margin-right: 20px;
}

.ref-image {
    vertical-align: text-bottom;
}

.error {
    color: red;
}

@media screen and (max-width: 768px) {
    .content {
        width: 90%;
    }

    .wrapper h1 {
        margin-top: 0;
        padding-top: 20px;
    }

    h1 {
        font-size: 34pt;
    }

    p, a {
        font-size: 16pt;
    }

    input {
        font-size: 14pt;
    }
}

